force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/tc9_edc__Setup_Notification_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Post Installation Notification Settings available for setup</description>
    <label>Setup Notification Setting</label>
    <pluralLabel>Setup Notification Settings</pluralLabel>
</CustomObject>