force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__A_Approver_Approval_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__A_Approver_Approval_Request_Email__c</fullName>
    <label>A.Approver Approval Request Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>