force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Auto_Send_A_Approver_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Send_A_Approver_Approval_Request__c</fullName>
    <label>Auto Send A.Approver Approval Request</label>
    <length>200</length>
    <type>Text</type>
</CustomField>