force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Auto_Send_Employee_Approved__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Send_Employee_Approved__c</fullName>
    <label>Auto Send Employee Approved</label>
    <length>200</length>
    <type>Text</type>
</CustomField>