force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Auto_Send_Employee_Rejected__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Send_Employee_Rejected__c</fullName>
    <label>Auto Send Employee Rejected</label>
    <length>200</length>
    <type>Text</type>
</CustomField>