force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Auto_Send_P_Approver_Approved_On_Behalf__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Send_P_Approver_Approved_On_Behalf__c</fullName>
    <label>Auto Send P.Approver Approved On Behalf</label>
    <length>200</length>
    <type>Text</type>
</CustomField>