force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Auto_Send_P_Approver_Rejected_By_Other__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Auto_Send_P_Approver_Rejected_By_Other__c</fullName>
    <label>Auto Send P.Approver Rejected By Other</label>
    <length>200</length>
    <type>Text</type>
</CustomField>