force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Employee_Rejected_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Employee_Rejected_Email__c</fullName>
    <label>Employee Rejected Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>