force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Notification_From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Notification_From_Email_Address__c</fullName>
    <label>Notification From Email Address</label>
    <type>Email</type>
</CustomField>