force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__Notification_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Notification_Setting_Name__c</fullName>
    <label>Notification Setting Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>