force-app/main/default/objects/tc9_edc__Setup_Notification_Setting__mdt/fields/tc9_edc__P_Approver_Rejected_By_Other_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__P_Approver_Rejected_By_Other_Email__c</fullName>
    <label>P.Approver Rejected By Other Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>